Fix moving hotspots when expand/collapse tree in Simple template (#243)

--- a/css/main.less
+++ b/css/main.less
@@ -575,6 +575,7 @@ ul {
     }
     &.hotspot-on-image-container {
         text-align: center;
+		line-height: 0;
     }
 }
 
